{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 1513,
  "lineage": "0f3a58a9-a873-2aff-6403-23e3494d16cc",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:loadbalancer/app/my-application-load-balancer/b04446a3a0b94b20",
            "arn_suffix": "app/my-application-load-balancer/b04446a3a0b94b20",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-application-load-balancer-48596560.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:loadbalancer/app/my-application-load-balancer/b04446a3a0b94b20",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08d97a09435cec45e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-067bc50f5cdf16172"
              },
              {
                "subnet_id": "subnet-0ca56ce901b2291b1"
              }
            ],
            "subnets": [
              "subnet-067bc50f5cdf16172",
              "subnet-0ca56ce901b2291b1"
            ],
            "tags": {
              "Name": "MyALB"
            },
            "tags_all": {
              "Name": "MyALB"
            },
            "vpc_id": "vpc-0036f498e4b10e9b2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:listener/app/my-application-load-balancer/b04446a3a0b94b20/621700c585c421be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:targetgroup/ec2-target-group/760552696fe6b41a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:listener/app/my-application-load-balancer/b04446a3a0b94b20/621700c585c421be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:loadbalancer/app/my-application-load-balancer/b04446a3a0b94b20",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.ec2_tg",
            "module.security_groups.aws_security_group.alb_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:targetgroup/ec2-target-group/760552696fe6b41a",
            "arn_suffix": "targetgroup/ec2-target-group/760552696fe6b41a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:730335206351:targetgroup/ec2-target-group/760552696fe6b41a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:route-table/rtb-0835e2a681e93fe6c",
            "id": "rtb-0835e2a681e93fe6c",
            "owner_id": "730335206351",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:route-table/rtb-05ed9a088eba51831",
            "id": "rtb-05ed9a088eba51831",
            "owner_id": "730335206351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e981f34760346e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00887c033f6084371",
            "route_table_id": "rtb-0835e2a681e93fe6c",
            "subnet_id": "subnet-096d16f950e2fd1fe"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf05bc1287742cb",
            "route_table_id": "rtb-0835e2a681e93fe6c",
            "subnet_id": "subnet-04f0c0a4df0952058"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac66185094a2ae8b",
            "route_table_id": "rtb-05ed9a088eba51831",
            "subnet_id": "subnet-067bc50f5cdf16172"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03258c914ef32c286",
            "route_table_id": "rtb-05ed9a088eba51831",
            "subnet_id": "subnet-0ca56ce901b2291b1"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc-endpoint/vpce-0c78282a1c21a2c72",
            "dns_entry": [
              {
                "dns_name": "vpce-0c78282a1c21a2c72-ez4v8uej.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0c78282a1c21a2c72-ez4v8uej-eu-central-1a.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0c78282a1c21a2c72-ez4v8uej-eu-central-1b.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "logs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07226743UQNWRGE7OL3B"
              },
              {
                "dns_name": "logs.eu-central-1.api.aws",
                "hosted_zone_id": "Z036935714LXCHK7XWK3D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c78282a1c21a2c72",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-039fe2c7e00f9ce0b",
              "eni-06c40833019e802fe"
            ],
            "owner_id": "730335206351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0effeb5e51a411c4f"
            ],
            "service_name": "com.amazonaws.eu-central-1.logs",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.192",
                "subnet_id": "subnet-096d16f950e2fd1fe"
              },
              {
                "ipv4": "10.0.3.92",
                "subnet_id": "subnet-04f0c0a4df0952058"
              }
            ],
            "subnet_ids": [
              "subnet-04f0c0a4df0952058",
              "subnet-096d16f950e2fd1fe"
            ],
            "tags": {
              "Name": "CloudWatch-Logs-VPC-Endpoint"
            },
            "tags_all": {
              "Name": "CloudWatch-Logs-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.vpc_endpoint_sg",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc-endpoint/vpce-041f6d55002a21632",
            "dns_entry": [
              {
                "dns_name": "vpce-041f6d55002a21632-0zjft0x7.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-041f6d55002a21632-0zjft0x7-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-041f6d55002a21632-0zjft0x7-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07230001HYYLJXGLOUHJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-041f6d55002a21632",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03da0c05fb7545c0d",
              "eni-0fe8aaebe0ea9d5e2"
            ],
            "owner_id": "730335206351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4044a834ae98a92"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.239",
                "subnet_id": "subnet-096d16f950e2fd1fe"
              },
              {
                "ipv4": "10.0.3.253",
                "subnet_id": "subnet-04f0c0a4df0952058"
              }
            ],
            "subnet_ids": [
              "subnet-04f0c0a4df0952058",
              "subnet-096d16f950e2fd1fe"
            ],
            "tags": {
              "Name": "EC2-Messages-VPC-Endpoint"
            },
            "tags_all": {
              "Name": "EC2-Messages-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.ssm_sg",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc-endpoint/vpce-053e9f924d7e798dd",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-053e9f924d7e798dd",
            "owner_id": "730335206351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0835e2a681e93fe6c"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "tags": {
              "Name": "S3-VPC-Endpoint"
            },
            "tags_all": {
              "Name": "S3-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc-endpoint/vpce-06fb2b58537025882",
            "dns_entry": [
              {
                "dns_name": "vpce-06fb2b58537025882-gogunmlm.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-06fb2b58537025882-gogunmlm-eu-central-1a.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-06fb2b58537025882-gogunmlm-eu-central-1b.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "secretsmanager.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04405992UX15PFPN8DLR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06fb2b58537025882",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08dc5bc11d6d48064",
              "eni-0adf6d731fd9204f1"
            ],
            "owner_id": "730335206351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0effeb5e51a411c4f"
            ],
            "service_name": "com.amazonaws.eu-central-1.secretsmanager",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.113",
                "subnet_id": "subnet-096d16f950e2fd1fe"
              },
              {
                "ipv4": "10.0.3.133",
                "subnet_id": "subnet-04f0c0a4df0952058"
              }
            ],
            "subnet_ids": [
              "subnet-04f0c0a4df0952058",
              "subnet-096d16f950e2fd1fe"
            ],
            "tags": {
              "Name": "SecretsManager-VPC-Endpoint"
            },
            "tags_all": {
              "Name": "SecretsManager-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.vpc_endpoint_sg",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc-endpoint/vpce-05855793a72bc8807",
            "dns_entry": [
              {
                "dns_name": "vpce-05855793a72bc8807-4hvzyr7b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-05855793a72bc8807-4hvzyr7b-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-05855793a72bc8807-4hvzyr7b-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z043424329QR8NISEEF83"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05855793a72bc8807",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0eb8513eb5b98415c",
              "eni-0f51a5395535497cf"
            ],
            "owner_id": "730335206351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4044a834ae98a92"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.191",
                "subnet_id": "subnet-096d16f950e2fd1fe"
              },
              {
                "ipv4": "10.0.3.206",
                "subnet_id": "subnet-04f0c0a4df0952058"
              }
            ],
            "subnet_ids": [
              "subnet-04f0c0a4df0952058",
              "subnet-096d16f950e2fd1fe"
            ],
            "tags": {
              "Name": "SSM-VPC-Endpoint"
            },
            "tags_all": {
              "Name": "SSM-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.ssm_sg",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc-endpoint/vpce-097ed6a92325e6823",
            "dns_entry": [
              {
                "dns_name": "vpce-097ed6a92325e6823-bl0qf6nq.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-097ed6a92325e6823-bl0qf6nq-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-097ed6a92325e6823-bl0qf6nq-eu-central-1b.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z03103372UN7Q0MVKYAXG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-097ed6a92325e6823",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06016dfd04863b6a5",
              "eni-0dd55c797bf327769"
            ],
            "owner_id": "730335206351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4044a834ae98a92"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.61",
                "subnet_id": "subnet-096d16f950e2fd1fe"
              },
              {
                "ipv4": "10.0.3.22",
                "subnet_id": "subnet-04f0c0a4df0952058"
              }
            ],
            "subnet_ids": [
              "subnet-04f0c0a4df0952058",
              "subnet-096d16f950e2fd1fe"
            ],
            "tags": {
              "Name": "SSM-Messages-VPC-Endpoint"
            },
            "tags_all": {
              "Name": "SSM-Messages-VPC-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.ssm_sg",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:security-group/sg-08d97a09435cec45e",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d97a09435cec45e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "730335206351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:security-group/sg-0dd465e8e4c947386",
            "description": "Security Group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd465e8e4c947386",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d97a09435cec45e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "730335206351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:security-group/sg-062f33c57b49d4a6c",
            "description": "Security Group for RDS",
            "egress": [],
            "id": "sg-062f33c57b49d4a6c",
            "ingress": [],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "730335206351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:security-group/sg-0f4044a834ae98a92",
            "description": "Security Group for AWS SSM VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f4044a834ae98a92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd465e8e4c947386"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-security-group",
            "name_prefix": "",
            "owner_id": "730335206351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSM-SG"
            },
            "tags_all": {
              "Name": "SSM-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:security-group/sg-0effeb5e51a411c4f",
            "description": "Security Group for VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0effeb5e51a411c4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "730335206351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-Endpoint-SG"
            },
            "tags_all": {
              "Name": "VPC-Endpoint-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1880079671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-062f33c57b49d4a6c",
            "security_group_rule_id": "sgr-0fd1b584b0e51fa48",
            "self": false,
            "source_security_group_id": "sg-0dd465e8e4c947386",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3015710383",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd465e8e4c947386",
            "security_group_rule_id": "sgr-05a2f614b90c3dfdc",
            "self": false,
            "source_security_group_id": "sg-062f33c57b49d4a6c",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:subnet/subnet-096d16f950e2fd1fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096d16f950e2fd1fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335206351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:subnet/subnet-04f0c0a4df0952058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f0c0a4df0952058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335206351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:subnet/subnet-067bc50f5cdf16172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067bc50f5cdf16172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335206351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:subnet/subnet-0ca56ce901b2291b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca56ce901b2291b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335206351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:internet-gateway/igw-07e981f34760346e1",
            "id": "igw-07e981f34760346e1",
            "owner_id": "730335206351",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-0036f498e4b10e9b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:730335206351:vpc/vpc-0036f498e4b10e9b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c6b22739938938a",
            "default_route_table_id": "rtb-00751f5569e82cbcf",
            "default_security_group_id": "sg-07573a53f00dfa581",
            "dhcp_options_id": "dopt-07e22c763c4e7d674",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0036f498e4b10e9b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00751f5569e82cbcf",
            "owner_id": "730335206351",
            "tags": {
              "Name": "MainVPC"
            },
            "tags_all": {
              "Name": "MainVPC"
            }
          }
        }
      ]
    }
  ]
}